# oreo

./: .gitignore  LICENSE  LICENSE.txt  README.md  TODO  oreo.py  pyproject.toml  test_arithmetic.py  test_context.py  test_indent.py  test_language.py  test_list_addition.py  test_oreo.py  test_simple.py  test_tokenizer.py
__pycache__/: .gitignore
oreo/: __init__.py
test_language/: 1.input
tests/: test_arithmetic.py  test_indent.py  test_language.py  test_list_addition.py  test_simple.py  test_tokenizer.py
